--- a/MovieTime/Scenes/Common/Cells/PosterTableViewCell.xib
+++ b/MovieTime/Scenes/Common/Cells/PosterTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,33 +18,36 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bm0-g3-9Qv">
-                        <rect key="frame" x="0.0" y="0.0" width="64" height="96"/>
+                        <rect key="frame" x="5" y="5" width="57.5" height="86"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="bm0-g3-9Qv" secondAttribute="height" multiplier="2:3" id="XQk-GN-vjx"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="UWU-vR-tZM">
-                        <rect key="frame" x="64" y="0.0" width="346" height="96"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="UWU-vR-tZM">
+                        <rect key="frame" x="72.5" y="15" width="332.5" height="49"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yT-g9-JeW">
-                                <rect key="frame" x="0.0" y="0.0" width="346" height="75.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="0.0" y="0.0" width="332.5" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="R8d-lx-wAc">
-                                <rect key="frame" x="0.0" y="75.5" width="346" height="20.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R8d-lx-wAc">
+                                <rect key="frame" x="0.0" y="31" width="332.5" height="18"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lT1-4x-ibI">
-                                        <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="bRj-uJ-GLW"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGl-7d-PSv">
-                                        <rect key="frame" x="304.5" y="0.0" width="41.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="120" y="0.0" width="212.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" systemColor="opaqueSeparatorColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -52,13 +56,12 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="UWU-vR-tZM" secondAttribute="trailing" id="5Ox-fl-UK5"/>
-                    <constraint firstItem="bm0-g3-9Qv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="7Ru-GE-pMf"/>
-                    <constraint firstItem="UWU-vR-tZM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Rst-Nm-az6"/>
-                    <constraint firstItem="bm0-g3-9Qv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="V3Y-Y1-EwU"/>
-                    <constraint firstItem="UWU-vR-tZM" firstAttribute="leading" secondItem="bm0-g3-9Qv" secondAttribute="trailing" id="XG3-Lm-jol"/>
-                    <constraint firstAttribute="bottom" secondItem="UWU-vR-tZM" secondAttribute="bottom" id="gxC-ca-3xF"/>
-                    <constraint firstAttribute="bottom" secondItem="bm0-g3-9Qv" secondAttribute="bottom" id="lB6-OW-DkJ"/>
+                    <constraint firstAttribute="trailing" secondItem="UWU-vR-tZM" secondAttribute="trailing" constant="5" id="5Ox-fl-UK5"/>
+                    <constraint firstItem="bm0-g3-9Qv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="7Ru-GE-pMf"/>
+                    <constraint firstItem="UWU-vR-tZM" firstAttribute="top" secondItem="bm0-g3-9Qv" secondAttribute="top" constant="10" id="Ueg-KX-rTJ"/>
+                    <constraint firstItem="bm0-g3-9Qv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="V3Y-Y1-EwU"/>
+                    <constraint firstItem="UWU-vR-tZM" firstAttribute="leading" secondItem="bm0-g3-9Qv" secondAttribute="trailing" constant="10" id="XG3-Lm-jol"/>
+                    <constraint firstAttribute="bottom" secondItem="bm0-g3-9Qv" secondAttribute="bottom" constant="5" id="lB6-OW-DkJ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -71,4 +74,9 @@
             <point key="canvasLocation" x="39.130434782608695" y="69.642857142857139"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
